REGRESSION: Cannot write a word with Korean double consonant https://bugs.webkit.org/show_bug.cgi?id=81186

Reviewed by Dan Bernstein.

WebKit change r103859 posts fake mouse-move events when the keyboard status is
changed. Unfortunately, these mouse events go to input methods and confuse a
Korean input method. This change directly calls handleMouseEvent() instead of
-mouseMoved: to prevent sending these fake events to input methods.

* UIProcess/API/mac/WKView.mm:
(-[WKView _postFakeMouseMovedEventForFlagsChangedEvent:]):


Canonical link: https://commits.webkit.org/100847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113523 268f45cc-cd09-0410-ab3c-d52691b4dbfc